router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__mutation.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
{
    "mut",
    "ping",
    "read user",
    "read username",
}
