router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__query_field.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
{
    "profile",
    "read user",
    "read username",
}
