router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__union.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
query {
  test
  uni {
    ... on A {
      id
    }
  }
}

